Squash all fetching bugs
Very happy with this one. The card rendering process now waits for all
images to be fetched instead of fetching immediately.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -111,13 +111,9 @@ main {
       outline: 2px solid var(--main-colour);
 
       .card-image {
+        width: 100%;
         height: 250px;
-        display: flex;
-        align-items: center;
-      }
-
-      .card-description {
-        padding: 0.5em;
+        border-radius: 8px;
       }
     }
   }
